# apertium-hsb

./: .gitattributes  Makefile.am  README  apertium-hsb.pc.in  configure.ac  modes.xml
